# GDGoC-Hackathon

./: .gitignore  README.md  docker-compose.yml  tmp_headless.json  tmp_register.json
backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_add_username_to_user.py  0002_alter_emailverificationtoken_token_alter_user_id.py  0002_user_github_url_user_icon_image_path_and_more.py  0003_alter_emailverificationtoken_options_and_more.py  0003_alter_emailverificationtoken_token_alter_user_id.py  0003_user_skills_alter_user_github_url.py  0004_alter_emailverificationtoken_token_alter_user_id.py  0004_merge_20260315_1636.py  0005_alter_emailverificationtoken_token_alter_user_id.py  0005_user_github_url_user_icon_image_path_and_more.py  0006_alter_emailverificationtoken_token_alter_user_id.py
backend/config/: gcs.py  settings.py  urls.py
backend/home/: serializers.py  urls.py  views.py
backend/message/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/message/migrations/: 0001_initial.py  0002_personalchatroom.py  0003_alter_chatroom_updated_at_and_more.py
backend/profile/: models.py  serializers.py  tests.py  urls.py  views.py
backend/profile/migrations/: 0001_initial.py  (+1 more)
backend/project/: api_test_example_local.http  api_test_local.http  models.py  serializers.py  urls.py  views.py
backend/search/: api_test_example.http  filters.py  pagination.py  urls.py  views.py
(+79 files in other folders)
